0.6.1 (2 April 2012)
- Made it easier to click beings that are next to other beings
- Removed NPC trade messages from chat (again)
- Fixed swapping of ring and necklace equipment slots
- Fixed drawing order of particles
- Fixed manaserv-enabled builds
- Fixed category of mana.desktop file
- Fixed display of server description
- Fixed issues with rendering very small maps
- Fixed compile for Mac OSX and reintroduced Xcode project
- Updated Finnish, Brazilian Portuguese and Polish translations

0.6.0 (12 February 2012)
- Added support for a larger number of character slots
- Added scrolling to tab bars when there isn't enough space
- Added a search bar to storage and inventory windows
- Added chat logging
- Added a screen shake effect when the character dies
- Added item quantity in the shop list
- Added customizable hit and attack effects
- Added support for floor item sprites
- Added support for different target cursor sizes for NPCs
- Added background support to the equipment boxes
- Added offsetX/Y to 'imageset' element that applies to all its frames
- Made it possible to separate the dye colors for particle effects
- Emotes are now customizable particle effects
- Allow resizing of the game in windowed mode
- Allow switching between windowed and fullscreen without restart
- Layered sprites are now buffered for performance and overlay support
- Announcements now go to the active chat tab in addition to global chat
- Fade out music when switching maps
- Stream music files directly from the archives
- Ignore ManaPlus shop commands sent over whisper
- Changed the window buttons to use icons
- Show selected target name with bold font
- Sounds that are further away are now more silent
- The NPC dialog can now be closed while it is waiting on the server
- Replaced '> Next' in NPC dialogs with just an empty line
- Made items equippable by double click in inventory
- Made the update window bigger and resizable
- Removed auto-untargeting after fighting for a minute